[package]
name = "rust-bff"
version = "0.1.0"
authors = ["Hoshi <hoshimure.47@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = { version = "3", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.8"
futures = "0.3"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.14.0"
openssl = "0.10.57"
