[package]
name = "rust-bff"
version = "0.1.0"
authors = ["Hoshi <hoshimure.47@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.8"
futures = "0.3"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.14.0"
urlencoding = "2.1.3"
openssl = "0.10.63"
awc = { version = "3.4.0", features = ["openssl"]}
html2text = "0.12.0"

